Added get endpoint for getting a game session by session id
